--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- ------GOOGLE FONTS START-------- -->
 
@@ -15,8 +15,9 @@
 
     <link rel="STYLESHEET" href = vendor/css/neutralize.css type = "text/css">
     <link rel="STYLESHEET" href = vendor/css/grid.css type = "text/css">
-    <link rel="STYLESHEET" href="vendor/css/ionicons.min.css" type="text/css" />
-    <link rel = "STYLESHEET" href = resources/css/styles.css type = "text/css">
+    <link rel="STYLESHEET" href = "vendor/css/ionicons.min.css" type="text/css" />
+    <link rel= stylesheet  href =  resources/css/queries.css type=text/css>
+    <link rel="STYLESHEET" href = resources/css/styles.css type = "text/css">
 
     <title>OmniFood</title>
   </head>
