--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE hml>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -39,7 +39,9 @@
           </ul>
         </div>
       </nav>
+      <div class="row">
       <div class="hero-text-box">
+        <div class="row">
         <h1 class="mh">
           Goodbye junk food.<br />
           Hello super healthy meals.
@@ -47,6 +49,9 @@
         <a href="#" class="btn coloredbtn">I’m hungry </a>
         <a href="#" class="btn ghostbtn">Show me more </a>
       </div>
+      </div>
+      </div>
+    
     </header>
     <!-- -------------SECTION START------------- -->
     <section class="menu-section" clearfix>
